--- a/css/style.scss
+++ b/css/style.scss
@@ -56,8 +56,9 @@ html,body {
 
 .name{
   font-family: 'IBM Plex Sans';
-  font-weight: 400;
+  font-weight: 600;
   font-style: bold;
+  color: #262626;
 }
 
 
