raspberry_pi support

--- a/css/style.scss
+++ b/css/style.scss
@@ -292,6 +292,7 @@ canvas.slotgraph {
 
   .name {
     font-size: calc(1vw + 7pt);
+    color: #262626;
   }
 
   .mic_id {
@@ -430,6 +431,7 @@ canvas.slotgraph {
     text-align: right;
     font-size: 18pt;
     margin: 0px;
+    color: #262626;
   }
 
   .battery-bars {
